test_regress/t/t_covergroup_func_override_bad.out
%Error: t/t_covergroup_func_override_bad.v:9:3: syntax error, unexpected function
    9 |   function sample();
      |   ^~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
